[package]
name = "fatcat"
version = "1.0.0"
edition = "2021"
authors = ["rxxuzi"]
description = "Hunt down the fat files hogging your disk space"
repository = "https://github.com/rxxuzi/fatcat"
license = "GPL-3.0"
keywords = ["cli", "disk", "files", "utility"]
categories = ["command-line-utilities"]

[dependencies]
jwalk = "0.8"
chrono = "0.4"
indicatif = "0.17"
colored = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"